@@ -1,2 +1,4 @@
 [Webhost]
 ControlPort=6352
+NtpConfigurationFile=/etc/ntp.conf
+NtpServiceName=ntp
