@@ -6,3 +6,5 @@
 	* Implemented the REBOOT command in webhostd(8).
 2015-12-05 Fred Gleason <fredg@paravelsystems.com>
 	* Implemented the UPGRADE command in webhostd(8).
+2015-12-05 Fred Gleason <fredg@paravelsystems.com>
+	* Implemented the NTP command in webhostd(8).
